--- a/navigation.css
+++ b/navigation.css
@@ -8,7 +8,7 @@
   
   header {
     /* where to set the color of the nav bar */
-      background: lightgray;
+      background: white;
       text-align: center;
       top:0px;
       position: fixed;
@@ -26,7 +26,7 @@
       padding-top:10px;
       top: 100%;
       left: 0;
-      background: gray;
+      background: white;
       width: 100%;
       transform: scale(1,0);
       transform-origin: top;
@@ -54,7 +54,7 @@
   }
   /* where to change the font color of the nav bar pop-up */
   nav a:hover {
-      color: orange;
+      color: #236F95;
   }
   
   .nav-checkbox:checked ~ nav {
@@ -144,7 +144,8 @@
       content: '';
       display: block;
       height: 3px;
-      background: black;
+      /* Where to change color of underline on desktop nav */
+      background: #236F95;
       position: absolute;
       top: 1.1em;
       left: 0;
