--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
     }
     
     body{
-    background-color: lightsteelblue;
+    background-color: white;
     font-family: 'Forma';
 }
 /* how the page wrapper will appear on mobile */
@@ -25,21 +25,28 @@ grid-gap: 25px;
 grid-template-columns: 1fr 1fr;
 grid-template-rows: auto;
 grid-template-areas: 
-    "v h"
-    "a a";
+    "v" 
+    "a"
+    "h"
+    "c";
 }
 
 #history {
 grid-area: h;
-background-color:red;
+background-color: none;
 }
 
 #variations{
 grid-area: v;
-background-color:black;
+background-color: none;
+
 }
 
 #alphabet {
+grid-area: a;
+}
+
+#characters {
 grid-area: a;
 }
 }
