--- a/main.css
+++ b/main.css
@@ -51,7 +51,42 @@ grid-area: c;
 }
 /* CSS for the footer */
 footer{
-    background-color: gray;
+    background-color: #2D86B1;
+.footer_text {
+    color: white;
+    padding: 20px;
+    font-size: 1.2em;
+    text-align: center;
+}
+}
+  
+ /* download button section */
+ .download_section {
+    background-color: white;
+    margin: left 80px;
+    text-align: center;
+ }
+ .download {
+    display: inline-block;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 0px 0px;
+    margin:60px;
+    border-radius: 0px;
+    font-size: 100px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: transparent;
+    color: #236F95;
+    border: 10px solid #236F95;
+    transition: all 0.3s ease;
+    padding: 0px 5px;
+ }
+ .download:hover {
+    background-color: #236F95;
+    color: #fff;
+ }
 }
 
 /* variable font animation */
